--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
 asgiref==3.7.2
 Django==4.2.5
+django-cors-headers==4.2.0
+django-extensions==3.2.3
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.0
+mysqlclient==2.2.0
+psycopg2-binary==2.9.7
+PyJWT==2.8.0
+pytz==2023.3.post1
+six==1.16.0
 sqlparse==0.4.4
+whitenoise==6.5.0
